Add navbar to header

--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP-Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="nav">
-            <div class="logo">
+            <a href="#" class="logo">
                 Header Logo
-            </div>
-            <ul>
+            </a>
+            <ul class="link-list">
                 <li><a href="#">Header link one</a></li>
                 <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
             </ul>
         </nav>
-        <div class="hero-wrapper">
-            <h1 class="hero-title">
-                This website is Awesome
-            </h1>
-            <div class="hero-subtitle">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam maiores
-                distinctio voluptatum ad earum autem tempora cupiditate, sequi hic id.
+        <div class="header-content-wrapper">
+            <div class="hero-wrapper">
+                <h1 class="hero-title">
+                    This website is Awesome
+                </h1>
+                <div class="hero-subtitle">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam maiores
+                    distinctio voluptatum ad earum autem tempora cupiditate, sequi hic id.
+                </div>
+                <a href="#" class="signup-btn">Sign Up</a>        
             </div>
-            <a href="#" class="signup-btn">Sign Up</a>        
+            <img src="" alt="" class="hero-img">
         </div>
-        <div class="header-img-wrapper">
-            <img src="" alt="header Image Placeholder">
-        </div>
+       
     </header>
 
     <section class="info-section">
