Add active links to nav

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 Header Logo
             </a>
             <ul class="link-list">
-                <li><a href="#">Header link one</a></li>
-                <li><a href="#">Header link two</a></li>
-                <li><a href="#">Header link three</a></li>
+                <li><a href="#info">Header link one</a></li>
+                <li><a href="#testimony">Header link two</a></li>
+                <li><a href="#cta">Header link three</a></li>
             </ul>
         </nav>
         <div class="header-content-wrapper">
@@ -35,7 +35,7 @@
        
     </header>
 
-    <section class="info-section">
+    <section class="info-section" id="info">
         <h2 class="info-title">
             Some random information
         </h2>
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <section class="testimonies">
+    <section class="testimonies" id="testimony">
         <div class="testimony-content">
             <blockquote class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                 Totam ratione temporibus vel tenetur! Dolor odit saepe inventore dicta amet, obcaecati repudiandae ab culpa, 
@@ -70,7 +70,7 @@
         
     </section>
 
-    <section class="call-to-action">
+    <section class="call-to-action" id="cta">
         <div class="cta-wrapper">
             <div class="cta-title">Call to action!Its time!</div>
             <div class="cta-content">Lorem ipsum dolor sit, amet ctetur ading elit. Rendus, excepturi?</div>
