Finish page header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam maiores
                     distinctio voluptatum ad earum autem tempora cupiditate, sequi hic id.
                 </div>
-                <a href="#" class="signup-btn">Sign Up</a>        
+                <a href="#" class="signup-btn btn-top">Sign Up</a>        
             </div>
             <img src="" alt="" class="hero-img">
         </div>
@@ -75,7 +75,7 @@
             <div class="cta-title">Call to action!Its time!</div>
             <div class="cta-content">Lorem ipsum dolor sit, amet ctetur ading elit. Rendus, excepturi?</div>
         </div>
-        <a href="#" class="signup-btn signup-btn-cta">Sign Up</a>
+        <a href="#" class="signup-btn btn-bottom">Sign Up</a>
     </section>
 
     <footer class="footer">
