Finish info section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header"> 
         <nav class="nav">
             <a href="index.html" class="logo">
                 Header Logo
@@ -41,22 +41,23 @@
         </h2>
         <div class="info-card-wrapper">
             <div class="card">
-                <img src="" alt="">
+                <img src="img/ocean.jpg" alt="Beach with water and a road on each side">
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, reprehenderit.</div>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <img src="img/trees.jpg" alt="lush green grass with trees">
                 <div>Suscipit earum maxime amet facilis sit ea porro, quaerat voluptate.</div>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <img src="img/stars.jpg" alt="a natural formation of hugh rocks with stars in the background">
                 <div>Doloribus illum aspernatur, necessitatibus maxime ipsam illo minus odio impedit.</div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <div>Assumenda odit soluta ullam vero, minus at doloremque labore illum.</div>
+                <img src="img/desert.jpg" alt="a man on top of sand dune with starry sky">
+                <div>Assumenda odit lorem40 soluta ullam vero, minus at doloremque labore illum.</div>
             </div>
         </div>
+        
     </section>
 
     <section class="testimonies" id="testimony">
