Finish testimonies section

--- a/index.html
+++ b/index.html
@@ -61,14 +61,12 @@
     </section>
 
     <section class="testimonies" id="testimony">
-        <div class="testimony-content">
-            <blockquote class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Totam ratione temporibus vel tenetur! Dolor odit saepe inventore dicta amet, obcaecati repudiandae ab culpa, 
-                sint cum, earum impedit nisi in porro!
-            </blockquote>
-            <div class="author">-Author Name</div>
-        </div>
-        
+        <blockquote class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Totam rat ione temp oribus vel tenetur! Dolor odit saepe inventore dicta amet, obcaecati repudiandae ab culpa, 
+            sint amet conse ctetur adip isic ing elit. 
+            Dearum imp edit nisi in porro!
+        </blockquote>
+        <div class="author">-Author Name</div>   
     </section>
 
     <section class="call-to-action" id="cta">
